--- a/agent/Dockerfile
+++ b/agent/Dockerfile
@@ -1,6 +1,8 @@
-FROM python:3.10-slim-bullseye
+FROM python:3.10.0-alpine
 COPY . /code
 WORKDIR /code
 RUN pip3 install -r libraries.txt
-EXPOSE 5000
+RUN apk add tshark
+RUN chgrp root /usr/bin/dumpcap
+EXPOSE 8003
 CMD python3 /code/agent.py
