Finished README.md and fixed Dockerfile

--- a/logger/Dockerfile
+++ b/logger/Dockerfile
@@ -2,4 +2,4 @@ FROM python:3.10-slim-bullseye
 WORKDIR /code
 COPY logger.py logger.py
 EXPOSE 6000
-CMD echo "This is a test"
+CMD python3 /code/logger.py
